octicon vertical-align, fixed: created css rule td span.octicon with line-height

--- a/public/main.css
+++ b/public/main.css
@@ -145,6 +145,11 @@ a.option-active {
 	color: #505050;
 }
 
+td span.octicon {
+	padding-left: 3px;
+	line-height: 30px;
+}
+
 .octicon {
 	padding-left: 23px;
 	
@@ -155,13 +160,6 @@ a.option-active {
 	padding-left: 23px;
 	line-height: 15px;
 	cursor: pointer;
-}
-
-.octicon-tisheet {
-	display: inline-block;
-
-	margin-top: 8px;
-	padding-left: 3px;
 }
 
 .ajax-loader {
